--- a/package.json
+++ b/package.json
@@ -22,28 +22,28 @@
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.3.0",
     "rxjs": "~6.6.3",
-    "tslib": "^1.14.1",
+    "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.0",
+    "@angular-devkit/build-angular": "~0.1102.0",
     "@angular/cli": "^11.2.0",
     "@angular/compiler-cli": "~11.2.0",
     "@angular/language-service": "~11.2.0",
     "@types/core-js": "^2.5.4",
-    "@types/jasmine": "~3.3.8",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~6.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
-    "protractor": "^7.0.0",
+    "@types/node": "^12.11.1",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
-    "tslint": "~6.1.3",
+    "tslint": "~6.1.0",
     "typescript": "~4.1.5"
   }
 }
