--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
     # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # A list of available CircleCI docker Convenience Images are available here: https://circleci.com/developer/images/image/cimg/node
     docker:
-      - image: cimg/node:15.1
+      - image: cimg/node:15.11.0-browsers
     # Then run your tests!
     # CircleCI will report the results back to your VCS provider.
     steps:
@@ -28,9 +28,6 @@ jobs:
       # If you are using yarn instead npm, remove the line above and uncomment the two lines below.
       # - node/install-packages:
       #     pkg-manager: yarn
-      - run:
-          name: install chrome
-          command: sudo apt-get install chromium
       - run:
           name: Run tests
           command: npm test
