--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,13 @@ jobs:
     # CircleCI will report the results back to your VCS provider.
     steps:
       #install browsers
-      - browser-tools/install-browser-tools
+      - browser-tools/install-chrome
+      - browser-tools/install-chromedriver
+      - run:
+          command: |
+            google-chrome --version
+            chromedriver --version
+          name: Check install
       # Checkout the code as the first step.
       - checkout
       # Next, the node orb's install-packages step will install the dependencies from a package.json.
