--- a/angular.json
+++ b/angular.json
@@ -68,7 +68,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "multimedia-manager-frontend:build",
+            "browserTarget": "multimedia-manager-frontend:build"
           },
           "configurations": {
             "production": {
@@ -128,10 +128,6 @@
       }
     }
   },
-  "schematics": {
-    "@schematics/angular:component": {
-      "styleext": "scss"
-    }
-  },
+
   "defaultProject": "multimedia-manager-frontend"
 }
